--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "rewrites": [
-    { "source": "/(.*)/", "destination": "/index.html" },
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  "redirects": [{ "source": "/(.*)/", "destination": "/$1", "permanent": true }],
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
