--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:prod": "run-p type-check \"build-only:prod {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
+    "build-only:prod": "vite build --mode production",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "analyze": "vite build --mode production --analyze"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -34,6 +37,7 @@
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "terser": "^5.40.0",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
