--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.3",
+    "nodemailer": "^7.0.3",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
