fix: format vercel.json for improved readability and consistency

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
-  "redirects": [{ "source": "/(.*)/", "destination": "/$1", "permanent": true }],
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "redirects": [
+    {
+      "source": "/((?!$).*)/",
+      "destination": "/$1",
+      "permanent": true
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
